# game_study

./: .gitignore  README.md
HORenderer/: CMakeLists.txt  README.md
HORenderer/include/: array.h  display.h  light.h  matrix.h  mesh.h  point.h  swap.h  texture.h  triangle.h  vector.h
HORenderer/src/: array.c  display.c  light.c  main.c  matrix.c  mesh.c  point.c  texture.c  triangle.c  vector.c
aesteroid_game/: aesteroid_game.sln
aesteroid_game/aesteroid_game/: Math.hpp  aesteroid_game.vcxproj  aesteroid_game.vcxproj.filters  main.cpp
ping_pong/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
space_rocket/: space_rocket.sln
space_rocket/space_rocket/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  BGSpriteComponent.cpp  BGSpriteComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  Math.cpp  Math.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  main.cpp  space_rocket.vcxproj  space_rocket.vcxproj.filters
